src/scss/backend/components/form_fields.scss
/* ... */
.checkbox.is-disabled .checkbox-text,
.checkbox-input:disabled+.checkbox-text {
  opacity: .5;
}

.checkbox.is-locked .checkbox-display {
  background-color: transparent;
  border-color: transparent;
}

.checkbox.is-locked .checkbox-display:after {
  background: 0 0;
  color: #888;
  content: '\e819';
  display: inline-block;
  font-family: fontello;
  font-size: 18px;
  font-weight: 400;
  height: 100%;
  left: 0;
  text-align: center;
  top: 0;
  width: 100%;
}

/*-------------------
    Radio Button
--------------------*/

.radio-input {
  display: none;
}

.radio-button {
  color: #888;
  cursor: pointer;
  overflow: hidden;
  position: relative;
  margin: 0;
  font-size: inherit;
}

.radio-button>i {
  float: left;
  position: relative;
  top: 1px;
  white-space: pre;
}

.radio-button>span {
  display: block;
  overflow: hidden;
  word-wrap: break-word;
}

.radio-button.radio-button-inline {
  display: inline-block;
}

.radio-button.radio-button-inline>i {
  float: none;
  white-space: normal;
}

.radio-button.radio-button-inline>span {
  display: inline;
}

.radio-button .checked {
  display: none;
}

.radio-button.is-checked,
.radio-input:checked+.radio-button {
  color: #363636;
  font-weight: 700;
}

.radio-button.is-checked>i,
.radio-input:checked+.radio-button>i {
  color: #0D94F6;
}

.radio-button.is-checked .checked,
.radio-input:checked+.radio-button .checked {
  display: inline-block;
}

.radio-button.is-checked .unchecked,
.radio-input:checked+.radio-button .unchecked {
  display: none;
}

.radio-button.is-disabled,
.radio-button.is-disabled>i {
  color: #ccc;
}

.radio-button-group {
  font-size: 13px;
}

.radio-button-group .form-group {
  margin-bottom: 10px;
}

.radio-button-group .form-text {
  margin: 0;
}

.radio-button-group .form-text .indent {
  margin-left: 15px;
}

.radio-button-group-item {
  vertical-align: middle;
}

.radio-button-group .form-group.is-inline {
  display: inline-block;
}

.radio-button-group .form-group.is-inline+.form-group {
  margin-left: 10px;
}

.radio-button-group .form-group.is-multiline {
  display: block;
}

.radio-button-group .form-group.is-multiline+.form-group {
  margin-left: 0;
}

/*-------------------
    Task Checkbox
--------------------*/

.task-check-box .task-check-box-container {
  width: 50px;
  height: 50px;
  line-height: 50px;
  border-radius: 50%;
  overflow: hidden;
  background: #ccc;
  font-size: 25px;
  color: #FFF;
  outline: 0;
}

.task-check-box .task-check-box-container .task-check-box-activity-icon,
.task-check-box .task-check-box-container .task-check-box-checkbox {
  height: 100%;
  align-items: center;
  justify-content: center;
  color: #FFF;
}

.task-check-box .task-check-box-container .task-check-box-activity-icon>i,
.task-check-box .task-check-box-container .task-check-box-checkbox>i {
  flex: 1;
  text-align: center;
  display: inline-block;
  font-size: inherit;
  font-weight: 400;
  cursor: pointer;
}

.task-check-box .task-check-box-container .task-check-box-activity-icon {
  display: inline-flex;
  width: 100%;
}

.task-check-box .task-check-box-container .task-check-box-checkbox {
  display: none;
  width: 200%;
  transition: transform .15s ease-in-out,background .15s ease-in-out;
  transform: translateX(0);
  font-size: 24px;
}

.task-check-box .task-check-box-container:hover {
  background: #0D94F6;
}

.task-check-box .task-check-box-container:hover .task-check-box-activity-icon {
  display: none;
}

.task-check-box .task-check-box-container:hover .task-check-box-checkbox {
  display: inline-flex;
}

.task-check-box .task-check-box-container.is-completed {
  background: #e9e9e9;
}

.task-check-box .task-check-box-container.is-completed .task-check-box-checkbox {
  transform: translateX(-50%);
}

.task-check-box .task-check-box-container.is-completed:hover {
  background: #49B04B;
}

.task-check-box .task-check-box-container.is-loading {
  background: #efefef;
}

.task-check-box.task-check-box-small .task-check-box-container {
  width: 36px;
  height: 36px;
  line-height: 36px;
  font-size: 19px;
}

/*-------------------
    Password
--------------------*/

.password-input {
  position: relative;
}

.password-input .checkbox {
  position: absolute;
  top: 7px;
  right: 5px;
}

.password-input .checkbox-input {
  display: none;
}

/*-------------------
    Tag Collection
--------------------*/

.tag-collection {
  width: 100%;
  line-height: 0;
  text-align: left;
  text-transform: capitalize;
}

.tag-collection>.tag {
  margin: 0 5px 5px 0;
}

.tag {
  font-size: 13px;
  line-height: 13px;
  background: #e9e9e9;
  padding: 6px 10px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  border-radius: 20px;
  -webkit-transition: all .15s ease-in-out;
  transition: all .15s ease-in-out;
  -webkit-transform-style: preserve-3d;
}

.tag>.tag-action {
  font-size: 18px;
  height: 18px;
  width: 18px;
  position: absolute;
  -webkit-transition: all .15s ease-in-out;
  transition: all .15s ease-in-out;
  top: 5px;
  right: 5px;
  opacity: 0;
  color: #888;
}

.tag>.tag-action:hover {
  color: #db4437;
}

.tag.tag-interactive:hover {
  background: #fff;
  padding: 8px 28px 8px 12px;
  margin: -2px -13px 3px -2px;
  z-index: 100;
  box-shadow: 0 2px 4px rgba(0,0,0,0.4);
}

.tag.tag-interactive:hover .tag-action {
  opacity: 1;
}

.tag.tag-thumbnail {
  line-height: 24px;
  padding: 0 10px 0 0;
}

.tag.tag-thumbnail .profile-image-component,
.tag.tag-thumbnail .table-cell-placeholder>.placeholder-circle {
  width: 24px;
  height: 24px;
}

.tag.tag-thumbnail .tag-display-name {
  padding-left: 30px;
}

.dropdown.is-disabled .tag.tag-interactive:hover {
  padding: 6px 10px;
  margin: 0 5px 5px 0;
  background: #e9e9e9;
  box-shadow: none;
}

.dropdown.is-disabled .tag>.tag-action {
  display: none;
}
/* ... */

